# VKACTF-2025

./: README.md
categories/crypto/cry-easy-Polibius/give/: flag.txt  give.py
categories/crypto/cry-easy-Polibius/solution/: solver.py  writeup.md
categories/crypto/cry-medium-Koblitz/give/: Dockerfile  ECC_crypto.py  main.py
categories/crypto/cry-medium-Koblitz/solution/: solve.py  writeup.md
categories/crypto/cry-medium-ROCA/solution/: coppersmith.py  solution.py  writeup.md
categories/crypto/cry-medium-ecc/give/: ecc.cpp
categories/crypto/cry-medium-ecc/solution/: solve.sage  writeup.md
categories/forensic/for-easy-BTL2CAPmouse/solution/: base64numbers.txt  combRecv.py  flagRecv.py  sniffed.pcapng  writeup.md
categories/forensic/for-easy-sounds/solution/: writeup.md
categories/forensic/for-hard-git/give/: yandexdisk.md
categories/forensic/for-hard-git/solution/: brute_git.py  writeup.md
categories/ppc/ppc-easy-LFIregex/solution/: solution.py  writeup.md
categories/ppc/ppc-medium-ocr/give/: Dockerfile  docker-compose.yaml  flag  maze_escape.py  maze_gen.py
categories/ppc/ppc-medium-ocr/solution/: Cargo.toml  writeup.md
categories/ppc/ppc-medium-ocr/solution/src/: main.rs
categories/reverse/cryrev-medium-LCG_xor/solution/: solution.py  writeup.md
categories/reverse/rev-easy-flappysipuha/solution/: solution.py  writeup.md
categories/reverse/rev-hard-RAT_zipslip/solution/: solution.py  writeup.md
categories/reverse/rev-med-obfus_.net/solution/: solution.py  writeup.md
categories/web/web-easy-Emergency-access/solution/: writeup.md
(+130 files in other folders)
