[package]
name = "mazerc"
version = "0.1.0"
edition = "2024"

[dependencies]
clap   = { version = "4", features = ["derive"] }
image  = "0.25"
serde  = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile   = "3"
tokio  = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12", features = ["json", "cookies", "rustls-tls"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1